force-app/main/default/objects/Education__c/fields/Education_End__c.field-meta.xml
<CustomField>
    <fullName>Education_End__c</fullName>
    <label>Education End</label>
    <type>Date</type>
</CustomField>