force-app/main/default/objects/Education__c/fields/Education_Start__c.field-meta.xml
<CustomField>
    <fullName>Education_Start__c</fullName>
    <label>Education Start</label>
    <type>Date</type>
</CustomField>