force-app/main/default/objects/Education__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <description>The name of the institution.</description>
    <label>Institution Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>